fixed changing image on entering name

--- a/task1-iRock/index.html
+++ b/task1-iRock/index.html
@@ -12,7 +12,7 @@
             
             if(userName) {
                 alert('It is good to meet you ' + userName + '.');
-                document.getElementById('rockIgm').src = 'smiling-islan-head.jpg';
+                document.getElementById('rockImg').src = 'source/images/smiling-island-head.jpg';
             }
         }
     </script>
