--- a/task3-iRockAgain/index.html
+++ b/task3-iRockAgain/index.html
@@ -6,24 +6,38 @@
     <title>IRock - the Virtual Pet Rock</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='source/style.css'>
+    <script type="text/javascript" src="source/cookie.js" ></script>
     <script>
+        var userName;
+        function greetUser(){
+            userName = getCookie("irock_username");
+            if(userName)
+            alert("Hello, " + userName + ", I missed you.")
+            else
+            alert("Hello, I am your per rock.");
+        }
         function touchRock(){
-            var userName = prompt('What is your name?', 'Enter your name here.');
-            
-            if(userName) {
-                alert('It is good to meet you ' + userName + '.');
-                document.getElementById('rockImg').src = 'source/images/smiling-island-head.jpg';
+            if (userName) {
+                alert("I like the attention, " + userName + ". Thank you.");
             }
-            setTimeout("document.getElementById('rockImg').src = 'source/images/sad-island-head.png'", 10000);
+            else {
+                userName = prompt("What is you name?", "Enter your name here.");
+                if (userName){
+                    alert("It is good to meet you, " + userName + ".");
+                    setCookie('irock_username', userName, 1000);
+                }
+            }
+            document.getElementById("rockImg").src = "source/images/smiling-island-head.jpg"
+            setTimeout("document.getElementById('rockImg').src = 'source/images/sad-island-head.png';", 15000);
+        }
+        function resizeRock(){
+            document.getElementById("rockImg").style.height = (document.body.clientHeight - 100) * 0.9 +"px";
         }
     </script>
 </head>
-<body onload="alert('Greetings, I am your pet Rock');">
+<body onload = "resizeRock(); greetUser();" onresize = "resizeRock()">
     <div>
         <img id='rockImg' src="source/images/island-head.png" alt="iRock" style='cursor:pointer' onclick='touchRock()'> 
     </div>
-
-
-    
 </body>
 </html>
